// $Id$

Location 6.3.1-RC-XXX [ongoing]
------------------
 - #617226 by nrussell, nickl: stop PHP error about foreach() applied to non-array
 - #340856 by SeanA: Use CSS instead of em tags to style location name
 - bug #584914 by claudiu.cristea: Fixed Romanian province list
 - Fixed prefixing bug in location_cck.install; patch courtesy of reubidium in #757594
 - Improved support for Denmark; patch courtesy of mikl and kaerast in #412112
 - fix for map links issue at #340740; using patch by mikl given in #412102
 - Fixed click sort for distance field handler; thanks to nickl and traxer for revisions of the patch in #326569
 - add new div with it's own class for location map links; revisions of patch by BWPanda and anonymous5190 in #172646
 - Committing fix for bug causing wrong default operator for provice operator; patch from ooh_truck in #746295
 - location_cck fixes from #391160; thank you nickl and smk-ka for patches
 - Fix #692668 requested by greggles in IRC: Reimplement gmap locpick proximity filter.
 - Fix #322328, original patch by AdAstra, rerolled by chx, rewritten to fix the root cause by BDragon: Fix country_name and province_name tokens.
 - Fix #679864 reported by ycwjjjj.
 - Fix #685946, original patch by mvc, alternate solution by me: Don't cause a php warning when attempting to load an unsupported country.
 - Fix #381498, patches by KarenS and jeffschuler -- Fix PHP warning.
 - Fix #403194, patch by eojthebrave (line added by BDragon as per the issue) -- Views support for phone/fax fields.
 - Fix [#441272], patch by mrtoner: Use non-broken code for special-casing the additional field.
 - Bring CCK tests in sync with base COW tests.
 - Fix location_cck node deletion (Apparently this never worked in the first place.)
 - Remove extra checks from location_cck that were working around a bug in location. 
 - Fix a few bugs in location_cck discovered while revamping the tests.